[tool.poetry]
name = "cryptobalance"
version = "0.1.0"
description = ""
authors = ["ICheered <tjeerd992@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
python-bitvavo-api = "^1.2.2"
fastapi = "^0.63.0"
rethinkdb = "^2.4.8"
loguru = "^0.5.3"
uvicorn = "^0.13.4"
ConfigArgParse = "^1.4"
pytz = "^2021.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
